# STM32Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  linker_script.ld
include/: constants.h  fixed16_16.h  i2c.h  mesh_data.h  sh1106.h  tim2.h
include/math/: binary_utils.h  fixed32.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
include/rendering/: camera.h  frametime_text.h  model.h  rasterization.h  text_drawing.h  vertex_processing.h
scripts/: extract_vertices_from_obj.py
src/: fixed16_16.c  fixed32.c  frame_drawing.c  i2c.c  main.c  runtime_abi.c  sh1106.c  startup.s  tim2.c
src/math/: binary_utils.c  fixed32.c  mat4.c  quat.c  vec3.c
src/rendering/: camera.c  frametime_text.c  model.c  rasterization.c  text_drawing.c  vertex_processing.c
test/: CMakeLists.txt  fixed16_16_test.c  fixed16_16_test.h  fixed32_test.c  fixed32_test.h  main.c
